# qr-detect

./: .gitignore  biome.json  package.json  pnpm-workspace.yaml  readme.md
.github/workflows/: release.yml
qr-detect/: package.json  readme.md
qr-detect-rs/: Cargo.toml  package.json
qr-detect-rs/src/: lib.rs
qr-detect/src/wasm/: index.d.ts  index.js
qr-detect/tests/: base.test.ts
