[package]
name = "qr-detect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
bardecoder = "0.5.0"
image = "0.24.9"
anyhow="1.0.86"

[profile.release]
debug = false
lto = true
strip = true
opt-level = "s"
codegen-units = 1